--- a/ROLLINGAVERAGE/WORK/compile.cfg
+++ b/ROLLINGAVERAGE/WORK/compile.cfg
@@ -1,10 +1,10 @@
 [View]
-Entity=filter
-Architecture=filter
+Entity=nbitadder
+Architecture=nbitadder
 TopLevelType=1
 [file:.\src\OCTAVIAN\Filter.vhd]
-File Time Lo=825839320
-File Time Hi=30806229
+File Time Lo=643189761
+File Time Hi=30807260
 Enabled=1
 State=Compiled
 [file:.\src\OCTAVIAN\HexConverter.vhd]
@@ -23,12 +23,17 @@ File Time Hi=30806229
 Enabled=1
 State=Compiled
 [file:.\src\OCTAVIAN\NBitAdder.vhd]
-File Time Lo=-1413868150
-File Time Hi=30806208
+File Time Lo=1209628325
+File Time Hi=30807259
 Enabled=1
 State=Compiled
 [file:.\src\OCTAVIAN\ShiftRegister.vhd]
 File Time Lo=1505708195
 File Time Hi=30806229
+Enabled=1
+State=Compiled
+[file:.\src\OCTAVIAN\BITADDER.vhd]
+File Time Lo=274413329
+File Time Hi=30807245
 Enabled=1
 State=Compiled
