--- a/ROLLINGAVERAGE/WORK/compile.cfg
+++ b/ROLLINGAVERAGE/WORK/compile.cfg
@@ -1,15 +1,15 @@
 [View]
-Entity=nbitadder
-Architecture=nbitadder
+Entity=filter
+Architecture=filter
 TopLevelType=1
 [file:.\src\OCTAVIAN\Filter.vhd]
-File Time Lo=643189761
-File Time Hi=30807260
+File Time Lo=1057280572
+File Time Hi=30807828
 Enabled=1
 State=Compiled
 [file:.\src\OCTAVIAN\HexConverter.vhd]
-File Time Lo=1940506440
-File Time Hi=30806229
+File Time Lo=50665968
+File Time Hi=30807837
 Enabled=1
 State=Compiled
 [file:.\src\OCTAVIAN\MainRegister.vhd]
@@ -23,13 +23,13 @@ File Time Hi=30806229
 Enabled=1
 State=Compiled
 [file:.\src\OCTAVIAN\NBitAdder.vhd]
-File Time Lo=1209628325
-File Time Hi=30807259
+File Time Lo=-1632203266
+File Time Hi=30807644
 Enabled=1
 State=Compiled
 [file:.\src\OCTAVIAN\ShiftRegister.vhd]
-File Time Lo=1505708195
-File Time Hi=30806229
+File Time Lo=-1552588954
+File Time Hi=30807704
 Enabled=1
 State=Compiled
 [file:.\src\OCTAVIAN\BITADDER.vhd]
