--- a/ROLLINGAVERAGE/library.cfg
+++ b/ROLLINGAVERAGE/library.cfg
@@ -1,2 +1,2 @@
-$include = "C:\Program Files (x86)\Aldec\Active-HDL 6.3\vlib\"
+$include = "$VSIMSALIBRARYCFG"
 WORK = ".\WORK\WORK.lib" 1586701398024
