--- a/ROLLINGAVERAGE/WORK/compile.cfg
+++ b/ROLLINGAVERAGE/WORK/compile.cfg
@@ -1,39 +1,58 @@
 [View]
-Entity=filter
-Architecture=filter
+Entity=Pseudo0_255
+Architecture=PseudoRNG
 TopLevelType=1
 [file:.\src\OCTAVIAN\Filter.vhd]
-File Time Lo=1057280572
-File Time Hi=30807828
 Enabled=1
-State=Compiled
 [file:.\src\OCTAVIAN\HexConverter.vhd]
-File Time Lo=50665968
-File Time Hi=30807837
 Enabled=1
-State=Compiled
 [file:.\src\OCTAVIAN\MainRegister.vhd]
-File Time Lo=-1451341457
-File Time Hi=30806229
 Enabled=1
-State=Compiled
 [file:.\src\OCTAVIAN\MUX.vhd]
-File Time Lo=-1876647132
-File Time Hi=30806229
 Enabled=1
-State=Compiled
 [file:.\src\OCTAVIAN\NBitAdder.vhd]
-File Time Lo=-1632203266
-File Time Hi=30807644
 Enabled=1
-State=Compiled
 [file:.\src\OCTAVIAN\ShiftRegister.vhd]
-File Time Lo=-1552588954
-File Time Hi=30807704
 Enabled=1
-State=Compiled
 [file:.\src\OCTAVIAN\BITADDER.vhd]
-File Time Lo=274413329
-File Time Hi=30807245
 Enabled=1
-State=Compiled
+[file:.\src\Frequency Divider.vhd]
+Enabled=1
+[file:.\src\RARES\Frequency Divider.vhd]
+Enabled=1
+[file:.\src\FrequencyDividerr.vhd]
+Enabled=1
+[file:.\src\RARES\FrequencyDivider.vhd]
+Enabled=1
+[file:.\src\FreqDivTest.vhd]
+Enabled=1
+[file:.\src\RARES\FreqDivTest.vhd]
+Enabled=1
+[file:.\src\Mux_8.vhd]
+Enabled=1
+[file:.\src\RARES\Mux_8.vhd]
+Enabled=1
+[file:.\src\SixDigit1.vhd]
+Enabled=1
+[file:.\src\LFSR.vhd]
+Enabled=1
+[file:.\src\RARES\Pseudo0_255.vhd]
+Enabled=1
+[file:.\src\Pseudo0_15.vhd]
+Enabled=1
+[file:.\src\RARES\Pseudo0_15.vhd]
+Enabled=1
+[file:.\src\SquareWave.vhd]
+Enabled=1
+[file:.\src\Register.vhd]
+Enabled=1
+[file:.\src\RARES\Register.vhd]
+Enabled=1
+[file:.\src\SixDigit2(WIP).vhd]
+Enabled=1
+[file:.\src\RARES\SixDigit1.vhd]
+Enabled=1
+[file:.\src\RARES\SixDigit2.vhd]
+Enabled=1
+[file:.\src\RARES\SquareWave.vhd]
+Enabled=1
