--- a/ROLLINGAVERAGE/WORK/compile.cfg
+++ b/ROLLINGAVERAGE/WORK/compile.cfg
@@ -1,6 +1,6 @@
 [View]
-Entity=filter
-Architecture=filter
+Entity=rollingaverage
+Architecture=rollingaverage
 TopLevelType=1
 [file:.\src\OCTAVIAN\Filter.vhd]
 File Time Lo=1057280572
@@ -8,8 +8,8 @@ File Time Hi=30807828
 Enabled=1
 State=Compiled
 [file:.\src\OCTAVIAN\HexConverter.vhd]
-File Time Lo=50665968
-File Time Hi=30807837
+File Time Lo=-166672166
+File Time Hi=30809252
 Enabled=1
 State=Compiled
 [file:.\src\OCTAVIAN\MainRegister.vhd]
@@ -35,5 +35,10 @@ State=Compiled
 [file:.\src\OCTAVIAN\BITADDER.vhd]
 File Time Lo=274413329
 File Time Hi=30807245
+Enabled=1
+State=Compiled
+[file:.\src\RollingAverage.vhd]
+File Time Lo=64106266
+File Time Hi=30809250
 Enabled=1
 State=Compiled
