--- a/ROLLINGAVERAGE/WORK/compile.cfg
+++ b/ROLLINGAVERAGE/WORK/compile.cfg
@@ -2,3 +2,87 @@
 Entity=
 Architecture=
 TopLevelType=
+[file:.\src\OCTAVIAN\BITADDER.vhd]
+File Time Lo=274413329
+File Time Hi=30807245
+Enabled=1
+State=Compiled
+[file:.\src\OCTAVIAN\Filter.vhd]
+File Time Lo=1057280572
+File Time Hi=30807828
+Enabled=1
+State=Compiled
+[file:.\src\OCTAVIAN\HexConverter.vhd]
+File Time Lo=-166672166
+File Time Hi=30809252
+Enabled=1
+State=Compiled
+[file:.\src\OCTAVIAN\MainRegister.vhd]
+File Time Lo=-1451341457
+File Time Hi=30806229
+Enabled=1
+State=Compiled
+[file:.\src\OCTAVIAN\MUX.vhd]
+File Time Lo=-1876647132
+File Time Hi=30806229
+Enabled=1
+State=Compiled
+[file:.\src\OCTAVIAN\NBitAdder.vhd]
+File Time Lo=-1632203266
+File Time Hi=30807644
+Enabled=1
+State=Compiled
+[file:.\src\OCTAVIAN\ShiftRegister.vhd]
+File Time Lo=-1552588954
+File Time Hi=30807704
+Enabled=1
+State=Compiled
+[file:.\src\RARES\FrequencyDivider.vhd]
+File Time Lo=-1304154584
+File Time Hi=30809415
+Enabled=1
+State=Compiled
+[file:.\src\RARES\Mux_8.vhd]
+File Time Lo=-1304134618
+File Time Hi=30809415
+Enabled=1
+State=Compiled
+[file:.\src\RARES\Pseudo0_15.vhd]
+File Time Lo=-1304114611
+File Time Hi=30809415
+Enabled=1
+State=Compiled
+[file:.\src\RARES\Pseudo0_255.vhd]
+File Time Lo=-1304094599
+File Time Hi=30809415
+Enabled=1
+State=Compiled
+[file:.\src\RARES\Register.vhd]
+File Time Lo=-1304074522
+File Time Hi=30809415
+Enabled=1
+State=Compiled
+[file:.\src\RARES\SixDigit1.vhd]
+File Time Lo=-1304064595
+File Time Hi=30809415
+Enabled=1
+State=Compiled
+[file:.\src\RARES\SixDigit2.vhd]
+File Time Lo=-1304044902
+File Time Hi=30809415
+Enabled=1
+State=Compiled
+[file:.\src\RARES\SquareWave.vhd]
+File Time Lo=-1304024594
+File Time Hi=30809415
+Enabled=1
+State=Compiled
+[file:.\src\RollingAverage.vhd]
+File Time Lo=64106266
+File Time Hi=30809250
+Enabled=1
+State=Compiled
+[file:.\src\wave.asdb]
+File Time Lo=-1303994843
+File Time Hi=30809415
+Enabled=1
