--- a/ROLLINGAVERAGE/WORK/compile.cfg
+++ b/ROLLINGAVERAGE/WORK/compile.cfg
@@ -1,44 +1,98 @@
 [View]
-Entity=Data_Generator
-Architecture=DataGen
+Entity=rollingaverage
+Architecture=rollingaverage
 TopLevelType=1
 [file:.\src\OCTAVIAN\BITADDER.vhd]
 Enabled=1
+File Time Lo=274413329
+File Time Hi=30807245
+State=Compiled
 [file:.\src\OCTAVIAN\Filter.vhd]
 Enabled=1
+File Time Lo=1057280572
+File Time Hi=30807828
+State=Compiled
 [file:.\src\OCTAVIAN\HexConverter.vhd]
 Enabled=1
+File Time Lo=-1931237023
+File Time Hi=30809654
+State=Modified
 [file:.\src\OCTAVIAN\MainRegister.vhd]
 Enabled=1
+File Time Lo=-1451341457
+File Time Hi=30806229
+State=Compiled
 [file:.\src\OCTAVIAN\MUX.vhd]
 Enabled=1
+File Time Lo=-1876647132
+File Time Hi=30806229
+State=Compiled
 [file:.\src\OCTAVIAN\NBitAdder.vhd]
 Enabled=1
+File Time Lo=-1632203266
+File Time Hi=30807644
+State=Compiled
 [file:.\src\OCTAVIAN\ShiftRegister.vhd]
 Enabled=1
+File Time Lo=-1552588954
+File Time Hi=30807704
+State=Compiled
 [file:.\src\RARES\FrequencyDivider.vhd]
 Enabled=1
+File Time Lo=-1772475136
+File Time Hi=30809654
+State=Modified
 [file:.\src\RARES\Mux_8.vhd]
 Enabled=1
+File Time Lo=-1304134618
+File Time Hi=30809415
+State=Compiled
 [file:.\src\RARES\Pseudo0_15.vhd]
 Enabled=1
+File Time Lo=-674100573
+File Time Hi=30809432
+State=Compiled
 [file:.\src\RARES\Pseudo0_255.vhd]
 Enabled=1
+File Time Lo=-674080602
+File Time Hi=30809432
+State=Compiled
 [file:.\src\RARES\Register.vhd]
 Enabled=1
+File Time Lo=-1304074522
+File Time Hi=30809415
+State=Compiled
 [file:.\src\RARES\SixDigit1.vhd]
 Enabled=1
+File Time Lo=-674060590
+File Time Hi=30809432
+State=Compiled
 [file:.\src\RARES\SixDigit2.vhd]
 Enabled=1
+File Time Lo=-1304044902
+File Time Hi=30809415
+State=Compiled
 [file:.\src\RARES\SquareWave.vhd]
 Enabled=1
+File Time Lo=-1304024594
+File Time Hi=30809415
+State=Compiled
 [file:.\src\Data_Generator.vhd]
 Enabled=1
 [file:.\src\RARES\Data_Generator.vhd]
 Enabled=1
+File Time Lo=-16648722
+File Time Hi=30809619
+State=Compiled
 [file:.\src\RollingAverage.vhd]
 Enabled=1
+State=Compiled
+File Time Lo=-661341077
+File Time Hi=30809651
 [file:.\src\Mux_8_2.vhd]
 Enabled=1
 [file:.\src\RARES\Mux_8_2.vhd]
 Enabled=1
+File Time Lo=-16608712
+File Time Hi=30809619
+State=Compiled
