--- a/ROLLINGAVERAGE/WORK/compile.cfg
+++ b/ROLLINGAVERAGE/WORK/compile.cfg
@@ -14,9 +14,9 @@ File Time Hi=30807828
 State=Compiled
 [file:.\src\OCTAVIAN\HexConverter.vhd]
 Enabled=1
-File Time Lo=-1931237023
-File Time Hi=30809654
-State=Modified
+File Time Lo=-1436750820
+File Time Hi=30812038
+State=Compiled
 [file:.\src\OCTAVIAN\MainRegister.vhd]
 Enabled=1
 File Time Lo=-1451341457
@@ -39,9 +39,9 @@ File Time Hi=30807704
 State=Compiled
 [file:.\src\RARES\FrequencyDivider.vhd]
 Enabled=1
-File Time Lo=-1772475136
-File Time Hi=30809654
-State=Modified
+File Time Lo=-1337724113
+File Time Hi=30812038
+State=Compiled
 [file:.\src\RARES\Mux_8.vhd]
 Enabled=1
 File Time Lo=-1304134618
@@ -96,3 +96,8 @@ Enabled=1
 File Time Lo=-16608712
 File Time Hi=30809619
 State=Compiled
+[file:.\src\TEST.awf]
+File Time Lo=-19025268
+File Time Hi=30812043
+Enabled=1
+State=Modified
